--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -3,7 +3,9 @@ contrastOpacity=188
 drawColor=#ff0000
 filenamePattern=%Y-%m-%d_%H-%M-%S
 saveAfterCopy=true
-savePath=/home/kristofers/Downloads
+savePath=/home/kristofers/Pictures/screenshots
+savePathFixed=false
 showMagnifier=true
 squareMagnifier=true
 uiColor=#ffffff
+uploadHistoryMax=25
