--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,7 +15,7 @@ monitor=,preferred,auto,1
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = pipewire & pipewire-pulse & wireplumber & waybar & hyprpaper & tuxedo-control-center & flameshot & librewolf & nextcloud & /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 & dbus-update-activation-environment DISPLAY XAUTHORITY WAYLAND_DISPLAY & xrdb "$XDG_CONFIG_HOME/X11/xresources" & spotifyd --no-daemon & syncthing
+exec-once = pipewire & pipewire-pulse & wireplumber & eww daemon & eww open bar & tuxedo-control-center & flameshot & librewolf & nextcloud & /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 & xrdb "$XDG_CONFIG_HOME/x11/xresources" & spotifyd --no-daemon & syncthing & dbus-update-activation-environment DISPLAY XAUTHORITY WAYLAND_DISPLAY & transmission-daemon #& hyprpaper
 
 
 
@@ -47,7 +47,7 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
     border_size = 2
     col.active_border = rgb(27a1b9)
     col.inactive_border = rgba(15161eaa)
@@ -55,14 +55,21 @@ general {
     layout = master
 }
 
+
+plugin {
+    split-monitor-workspaces {
+        count = 10
+    }
+}
+
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 10
-    blur = yes
-    blur_size = 4
-    blur_passes = 1
-    blur_new_optimizations = on
+    rounding = 5
+    # blur = yes
+    # blur_size = 4
+    # blur_passes = 1
+    # blur_new_optimizations = on
 
     drop_shadow = yes
     shadow_range = 4
@@ -71,7 +78,7 @@ decoration {
 }
 
 animations {
-    enabled = yes
+    enabled = no
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -109,16 +116,17 @@ device:epic mouse V1 {
 # Example windowrule v1
 windowrulev2 = fullscreen, class:mpv
 
+windowrulev2 = workspace 5, class:steam
+
 windowrulev2 = workspace 7, class:tuxedo-control-center
 windowrulev2 = workspace 7, class:corectrl
-windowrulev2 = workspace 7, class:thunderbird
 windowrulev2 = opacity 0.95, class:thunderbird
 
 windowrulev2 = workspace 8, class:discord
 windowrulev2 = opacity 0.95, class:discord
 windowrulev2 = workspace 8, class:Ripcord
-windowrulev2 = workspace 8, class:telegram
-windowrulev2 = opacity 0.95, class:telegram
+windowrulev2 = workspace 8, class:TelegramDesktop
+windowrulev2 = opacity 0.95, class:TelegramDesktop
 windowrulev2 = workspace 8, class:Ferdium
 windowrulev2 = opacity 0.9, class:Ferdium
 
@@ -149,16 +157,14 @@ $mainMod = SUPER
 bind = $mainMod, B ,exec, librewolf
 bind = $mainMod, Return, exec, alacritty
 bind = $mainMod SHIFT, Q, killactive
-bind = $mainMod SHIFT CTRL, Q, exit
-bind = $mainMod, N, exec, spacefm
+# bind = $mainMod SHIFT CTRL, Q, exit
+bind = $mainMod, N, exec, alacritty -e lfrun
 bind = $mainMod CTRL, SPACE, togglefloating
 bind = $mainMod, P, exec, wofi --show drun -ib
 bind = $mainMod, F, fullscreen
 bind = $mainMod, M, bringactivetotop
 bind = $mainMod, A, pin
-bind = $mainMod, O, swapactiveworkspaces
-
-bind = $mainMod CTRL, R, forcerendererreload
+# bind = $mainMod, O, split-changemonitor
 
 # Resize window
 bind = $mainMod, L, splitratio, 0.05
@@ -214,13 +220,14 @@ bind = , PRINT, exec, hyprshot -m  output
 bind = SHIFT, PRINT, exec, hyprshot -m window
 
 bind = $mainMod ALT, P, exec, hyprpicker -a  # colorpicker
+# bind = $mainMod SHIFT, L, exec, lock  # lock
 
 # Control keybinds
-bindel = , XF86MonBrightnessUp, exec, brightnessctl set +2%  # increase brightness by 2%
-bindel = , XF86MonBrightnessDown, exec, brightnessctl set 2%-  # decrease brightness by 2%
+bindel = , XF86MonBrightnessUp, exec, doas brightnessctl set +2%  # increase brightness by 2%
+bindel = , XF86MonBrightnessDown, exec, doas brightnessctl set 2%-  # decrease brightness by 2%
 bindel = , XF86AudioRaiseVolume, exec, pulsemixer --change-volume +2  # increase volume by 2
 bindel = , XF86AudioLowerVolume, exec, pulsemixer --change-volume -2  # decrease volume by 2
 bindel = , XF86AudioMute, exec, pulsemixer --toggle-mute  # mute volume
 bindel = , XF86AudioPlay, exec, playerctl -a play-pause  # pause/play everything
 
-bindl = , switch:Lid Switch, exec, lock
+bindl = , switch:Lid Switch, exec, swaylock
